# claude-plugin-validate

./: Cargo.toml  README.md
fixtures/components/invalid/: agent.md
fixtures/components/valid/: agent.md
fixtures/manifest/invalid/: plugin.json
fixtures/manifest/valid/: plugin.json
spec/: VALIDATOR_SPEC.md
src/: component.rs  lib.rs  main.rs
src/manifest/: channels_settings.rs  commands.rs  common.rs  dependencies.rs  hooks.rs  lsp_servers.rs  mcp_servers.rs  metadata.rs  mod.rs  path_fields.rs  user_config.rs
