[package]
name = "claude-plugin-validate"
version = "0.1.0"
edition = "2024"
description = "CLI validator for Claude Code plugin manifests and plugin content schemas."
license = "MIT"
homepage = "https://github.com/situ2001/claude-plugin-validate"
documentation = "https://github.com/situ2001/claude-plugin-validate"
repository = "https://github.com/situ2001/claude-plugin-validate"

[lib]
name = "cc_plugin_validator"
path = "src/lib.rs"

[[bin]]
name = "claude-plugin-validate"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
url = "2"
walkdir = "2"
owo-colors = { version = "4", features = ["supports-colors"] }
